--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,7 @@
 
                         <include layout="@layout/layout_home_search" />
 
-                        <include layout="@layout/item_menu" />
+                        <include layout="@layout/layout_menu" />
 
                         <include layout="@layout/layout_home_banner" />
 
