--- a/app/src/main/res/layout/item_team_data.xml
+++ b/app/src/main/res/layout/item_team_data.xml
@@ -17,8 +17,9 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/img_pic"
+                android:layout_width="@dimen/dp_78"
+                android:layout_height="@dimen/dp_78"
                 android:src="@drawable/ic_order_zhanwei" />
 
             <LinearLayout
@@ -32,7 +33,6 @@
                     android:id="@+id/txt_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:gravity="start|center|top"
                     android:lineSpacingExtra="@dimen/dp_2"
                     android:lines="2"
@@ -40,6 +40,7 @@
                     android:textSize="@dimen/sp_12" />
 
                 <TextView
+                    android:id="@+id/txt_order_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
@@ -75,6 +76,7 @@
                     android:textSize="@dimen/sp_12" />
 
                 <TextView
+                    android:id="@+id/txt_payment_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_6"
@@ -95,11 +97,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
-                    android:text="付款金额"
+                    android:text="付款预估收入"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/sp_12" />
 
                 <TextView
+                    android:id="@+id/txt_commission"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_6"
@@ -109,18 +112,24 @@
                     android:textSize="@dimen/sp_12" />
             </LinearLayout>
 
+            <View
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
-                    android:text="付款金额"
+                    android:text="提成"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/sp_12" />
 
@@ -137,6 +146,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/txt_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
