--- a/app/src/main/res/layout/activity_banlance.xml
+++ b/app/src/main/res/layout/activity_banlance.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,7 +11,6 @@
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBg"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:srlEnablePureScrollMode="true">
 
@@ -33,17 +33,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="我的余额"
                     android:layout_marginTop="@dimen/dp_20"
+                    android:text="我的余额"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/sp_18" />
 
                 <TextView
+                    android:id="@+id/txt_balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="¥1000000000.00"
                     android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/sp_42" />
+                    android:textSize="@dimen/sp_42"
+                    tools:text="¥1000000000.00" />
+
                 <Button
                     android:id="@+id/btn_logout"
                     android:layout_width="match_parent"
@@ -56,14 +58,15 @@
                     android:text="提现"
                     android:textColor="@color/color_person_item"
                     android:textSize="@dimen/sp_18" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_income"
-                    android:gravity="center"
                     android:layout_margin="@dimen/dp_20"
-                    android:padding="@dimen/dp_10"
-                    android:baselineAligned="false">
+                    android:background="@drawable/bg_income"
+                    android:baselineAligned="false"
+                    android:gravity="center"
+                    android:padding="@dimen/dp_10">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -80,12 +83,13 @@
                             android:textSize="@dimen/sp_16" />
 
                         <TextView
+                            android:id="@+id/txt_own_commission"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_6"
-                            android:text="8778.00"
                             android:textColor="@color/text_income"
-                            android:textSize="@dimen/sp_16" />
+                            android:textSize="@dimen/sp_16"
+                            tools:text="8778.00" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -98,17 +102,18 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="自购收益"
+                            android:text="粉丝收益"
                             android:textColor="@color/text_income"
                             android:textSize="@dimen/sp_16" />
 
                         <TextView
+                            android:id="@+id/txt_fans_commission"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_6"
-                            android:text="8778.00"
                             android:textColor="@color/text_income"
-                            android:textSize="@dimen/sp_16" />
+                            android:textSize="@dimen/sp_16"
+                            tools:text="8778.00" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -121,34 +126,22 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="自购收益"
+                            android:drawableRight="@drawable/ic_question_mark"
+                            android:drawablePadding="@dimen/dp_10"
+                            android:text="未结算"
                             android:textColor="@color/text_income"
                             android:textSize="@dimen/sp_16" />
 
                         <TextView
+                            android:id="@+id/txt_wait_commission"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_6"
-                            android:text="8778.00"
                             android:textColor="@color/text_income"
-                            android:textSize="@dimen/sp_16" />
+                            android:textSize="@dimen/sp_16"
+                            tools:text="8778.00" />
                     </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-
-                        android:gravity="center|top">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_question_mark" />
-                    </LinearLayout>
-
                 </LinearLayout>
-
 
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
