--- a/app/src/main/res/layout/activity_hair_circle_center.xml
+++ b/app/src/main/res/layout/activity_hair_circle_center.xml
@@ -8,6 +8,7 @@
     <include layout="@layout/title_bar_four" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
