--- a/app/src/main/res/layout/item_circle_center.xml
+++ b/app/src/main/res/layout/item_circle_center.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/txt_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="小编推荐"
@@ -47,6 +48,7 @@
                     android:background="@drawable/bg_circle_tag"
                     android:gravity="center"
                     android:text="拼多多"
+                    android:visibility="gone"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/sp_10" />
 
@@ -54,12 +56,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="预计赚：¥12.89"
+                    android:visibility="gone"
                     android:textColor="@color/item_circle_money"
                     android:textSize="@dimen/sp_12" />
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/txt_create_at"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="今天 16：55"
@@ -76,6 +80,7 @@
         android:paddingLeft="@dimen/dp_40">
 
         <TextView
+            android:id="@+id/txt_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ll_title"
