--- a/app/src/main/res/layout/activity_invite.xml
+++ b/app/src/main/res/layout/activity_invite.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <include layout="@layout/title_bar_four" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -42,7 +44,7 @@
                         android:id="@+id/txt_total"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="4"
+                        tools:text="4"
                         android:textColor="@color/item_circle_time"
                         android:textSize="@dimen/sp_14" />
                 </LinearLayout>
@@ -90,6 +92,7 @@
                         android:gravity="center">
 
                         <TextView
+                            android:id="@+id/txt_invite_code"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="我的邀请码:IM0009"
