--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="tab_underline_color">#FFCD3B</color>
     <color name="team_data_select">#FFC832</color>
     <color name="color_vip">#BEA474</color>
+    <color name="color_green">#3AC652</color>
     <color name="tem_data_list_head">#F7E1D7</color>
     <color name="colorBlack">#000000</color>
     <color name="color_person_item">#0D0D0D</color>
