--- a/app/src/main/res/layout/activity_my_ali_pay.xml
+++ b/app/src/main/res/layout/activity_my_ali_pay.xml
@@ -92,7 +92,7 @@
                             android:layout_marginRight="@dimen/dp_5"
                             android:background="@null"
                             android:hint="请输入真实姓名"
-                            android:inputType="phone"
+                            android:inputType="text"
                             android:singleLine="true"
                             android:textColor="@color/text_input_title"
                             android:textSize="@dimen/sp_16" />
