--- a/app/src/main/res/layout/item_income_detail.xml
+++ b/app/src/main/res/layout/item_income_detail.xml
@@ -6,6 +6,7 @@
     android:padding="@dimen/dp_10">
 
     <TextView
+        android:id="@+id/txt_money"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -20,6 +21,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txt_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="自购订单收益"
@@ -27,6 +29,7 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/txt_create_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_6"
