--- a/common/src/main/res/layout/item_tag.xml
+++ b/common/src/main/res/layout/item_tag.xml
@@ -9,6 +9,7 @@
         android:id="@+id/item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         tools:text="@string/app_name" />
 
     <!--android:layout_margin="8dp"-->
