--- a/app/src/main/res/layout/layout_income_popu.xml
+++ b/app/src/main/res/layout/layout_income_popu.xml
@@ -15,17 +15,17 @@
             android:id="@+id/tag_income"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:item_background="@drawable/bg_tag_income"
+            app:item_background="@drawable/tag_layer"
+            app:item_bottomMargin="@dimen/dp_10"
+            app:item_bottomPadding="@dimen/dp_8"
+            app:item_leftMargin="@dimen/dp_6"
+            app:item_leftPadding="@dimen/dp_12"
+            app:item_rightMargin="@dimen/dp_6"
+            app:item_rightPadding="@dimen/dp_12"
             app:item_textColor="@color/colorBlack"
             app:item_textSize="@dimen/sp_14"
-            app:item_leftPadding="@dimen/dp_12"
-            app:item_rightPadding="@dimen/dp_12"
-            app:item_bottomPadding="@dimen/dp_6"
-            app:item_topPadding="@dimen/dp_6"
-            app:item_bottomMargin="@dimen/dp_8"
-            app:item_leftMargin="@dimen/dp_4"
-            app:item_rightMargin="@dimen/dp_4"
-            app:item_topMargin="@dimen/dp_4"
+            app:item_topMargin="@dimen/dp_6"
+            app:item_topPadding="@dimen/dp_8"
             />
     </LinearLayout>
 
