--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,4 +76,13 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/line_color</item>
     </style>
+
+    <style name="AlibcLoginTheme" parent="android:Theme.NoTitleBar.Fullscreen">
+
+        <item name="android:windowIsTranslucent">false</item>
+
+        <item name="android:windowDisablePreview">true</item>
+
+    </style>
+
 </resources>
