--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,8 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoLink="all"
-                android:text="无法登录？"
                 android:padding="@dimen/dp_5"
+                android:text="无法登录？"
                 android:textColor="@color/text_hint"
                 android:textSize="@dimen/sp_12" />
 
@@ -68,23 +68,48 @@
             android:gravity="center"
             android:visibility="gone">
 
-            <TextView
-                android:id="@+id/txt_qq"
+            <LinearLayout
+                android:id="@+id/ll_qq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dp_20"
-                android:drawableTop="@drawable/ic_qq_login"
-                android:drawablePadding="@dimen/dp_10"
-                android:text="QQ登录" />
+                android:layout_marginRight="@dimen/dp_10"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txt_phone"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_qq_login" />
+
+                <TextView
+                    android:id="@+id/txt_qq"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:text="QQ登录" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_20"
-                android:drawableTop="@drawable/ic_phone_login"
-                android:drawablePadding="@dimen/dp_10"
-                android:text="手机登录" />
+                android:layout_marginLeft="@dimen/dp_10"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_phone_login" />
+
+                <TextView
+                    android:id="@+id/txt_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:text="手机登录" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
