--- a/app/src/main/res/layout/layout_home_search.xml
+++ b/app/src/main/res/layout/layout_home_search.xml
@@ -3,27 +3,27 @@
     android:id="@+id/ll_search"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="start"
-    android:layout_marginLeft="@dimen/dp_36"
-    android:layout_marginTop="-10dp"
-    android:layout_marginRight="@dimen/dp_36"
-    android:background="@drawable/bg_title_search"
-    android:gravity="center|start"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/dp_10"
-    android:paddingRight="@dimen/dp_10">
+    android:layout_gravity="center|top"
+    android:layout_marginBottom="@dimen/dp_10"
+    android:layout_marginLeft="@dimen/dp_32"
+    android:layout_marginRight="@dimen/dp_32"
+    android:background="@drawable/bg_round_white_30"
+    android:elevation="@dimen/dp_6"
+    android:layout_marginTop="-5dp"
+    android:gravity="center"
+    android:minHeight="@dimen/dp_20"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txt_search"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
+        android:drawableRight="@drawable/ic_search"
+
         android:hint="搜到你意想不到的优惠"
+        android:padding="@dimen/dp_14"
         android:textColor="@color/text_toolbar_title"
         android:textSize="@dimen/sp_18" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_search" />
 </LinearLayout>
