--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,5 +53,7 @@
     <dimen name="dp_29">29dp</dimen>
     <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_22">22dp</dimen>
+    <dimen name="dp_90">90dp</dimen>
+    <dimen name="dp_32">32dp</dimen>
 
 </resources>
