--- a/app/src/main/res/layout/activity_search_detail.xml
+++ b/app/src/main/res/layout/activity_search_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/title_bar_two" />
+    <include layout="@layout/title_bar_search" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
