--- a/app/src/main/res/layout/item_team_data.xml
+++ b/app/src/main/res/layout/item_team_data.xml
@@ -44,7 +44,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
-                    android:background="@drawable/bg_paid"
+                    android:paddingTop="@dimen/dp_2"
+                    android:paddingBottom="@dimen/dp_2"
+                    android:background="@drawable/bg_round_orange"
                     android:gravity="center"
                     android:paddingLeft="@dimen/dp_10"
                     android:paddingRight="@dimen/dp_10"
