--- a/app/src/main/res/layout/activity_banlance.xml
+++ b/app/src/main/res/layout/activity_banlance.xml
@@ -63,8 +63,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dp_20"
-                    android:background="@drawable/bg_income"
+                    android:background="@drawable/bg_round_white"
                     android:baselineAligned="false"
+                    android:elevation="@dimen/dp_6"
                     android:gravity="center"
                     android:padding="@dimen/dp_10">
 
