--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,13 +18,13 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/txt_title"
+            android:layout_above="@+id/txt_info"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="40dp"
             android:src="@drawable/logo" />
 
         <TextView
-            android:id="@+id/txt_title"
+            android:id="@+id/txt_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
