--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -119,7 +119,7 @@
                         android:id="@+id/img_wechat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_weixin_pay" />
+                        android:src="@drawable/ic_alipay" />
 
                     <TextView
                         android:id="@+id/txt_info"
@@ -127,7 +127,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/dp_10"
                         android:layout_marginRight="@dimen/dp_10"
-                        android:text="微信"
+                        android:text="支付宝"
                         android:textColor="@color/text_withdraw_way"
                         android:textSize="@dimen/sp_16" />
 
