--- a/app/src/main/res/layout/item_rule.xml
+++ b/app/src/main/res/layout/item_rule.xml
@@ -15,11 +15,14 @@
         android:textSize="@dimen/sp_14" />
 
     <TextView
+        android:id="@+id/txt_rule"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_10"
         android:layout_marginRight="@dimen/dp_10"
         android:layout_weight="1"
+
+        android:lineSpacingExtra="@dimen/dp_4"
         android:text="自购订单收益"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/sp_13" />
