--- a/app/src/main/res/layout/title_bar_search.xml
+++ b/app/src/main/res/layout/title_bar_search.xml
@@ -31,19 +31,30 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_5"
-                android:layout_marginRight="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_10"
                 android:layout_weight="1"
                 android:background="@drawable/bg_toolbar_search"
-                android:drawableRight="@drawable/ic_search"
                 android:gravity="center|start"
                 android:hint="推荐搜索佣金更高哟～"
                 android:imeOptions="actionSearch"
+                android:lines="1"
                 android:paddingLeft="@dimen/dp_14"
                 android:paddingRight="@dimen/dp_14"
                 android:singleLine="true"
                 android:textColor="@color/text_search"
                 android:textSize="@dimen/sp_14" />
 
+            <TextView
+                android:id="@+id/txt_search"
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dp_10"
+                android:background="@drawable/bg_round_search_bar"
+                android:gravity="center"
+                android:padding="@dimen/dp_10"
+                android:text="搜索"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/sp_14" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
