--- a/app/src/main/res/drawable/tag_layer.xml
+++ b/app/src/main/res/drawable/tag_layer.xml
@@ -5,7 +5,9 @@
     <!-- 个人觉得更形象的表达：top代表下边的阴影高度，left代表右边的阴影宽度。其实也就是相对应的offset，solid中的颜色是阴影的颜色，也可以设置角度等等 -->
     <item
         android:left="2dp"
-        android:top="2dp">
+        android:top="2dp"
+        android:bottom="@dimen/dp_2"
+        android:right="@dimen/dp_2">
         <shape android:shape="rectangle" >
 
             <gradient
@@ -26,7 +28,9 @@
     <!-- 形象的表达：bottom代表背景部分在上边缘超出阴影的高度，right代表背景部分在左边超出阴影的宽度（相对应的offset） -->
     <item
         android:bottom="3dp"
-        android:right="3dp">
+        android:right="3dp"
+        android:top="@dimen/dp_3"
+        android:left="@dimen/dp_3">
         <shape android:shape="rectangle" >
 
             <gradient
