--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,12 +13,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/txt_info"
+            android:layout_above="@+id/view_center"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="40dp"
             android:src="@drawable/logo" />
@@ -27,79 +28,78 @@
             android:id="@+id/txt_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_above="@id/view_center"
+            android:layout_centerHorizontal="true"
             android:text="淘宝网购神器"
             android:textColor="@color/text_normal"
             android:textSize="@dimen/sp_26" />
 
-        <LinearLayout
-            android:id="@+id/ll_wechat"
+        <View
+            android:id="@+id/view_center"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal" />
+
+        <Button
+            android:id="@+id/btn_wechat_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/ll_arrow"
-            android:layout_marginBottom="@dimen/dp_30"
+            android:layout_below="@+id/txt_info"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/dp_44"
+            android:layout_marginTop="@dimen/dp_78"
+            android:layout_marginRight="@dimen/dp_44"
+            android:background="@drawable/btn_wechat_login"
             android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/btn_wechat_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_wechat_login" />
-
-            <TextView
-                android:id="@+id/txt_cannot_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:autoLink="all"
-                android:padding="@dimen/dp_5"
-                android:text="无法登录？"
-                android:textColor="@color/text_hint"
-                android:textSize="@dimen/sp_12" />
-
-        </LinearLayout>
+            android:paddingBottom="@dimen/dp_5"
+            android:text="注   册"
+            android:textSize="@dimen/sp_16" />
 
         <LinearLayout
             android:id="@+id/ll_other"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/ll_arrow"
-            android:layout_marginBottom="@dimen/dp_30"
+            android:layout_below="@+id/btn_wechat_login"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/dp_30"
+            android:layout_marginTop="@dimen/dp_60"
+            android:layout_marginRight="@dimen/dp_30"
             android:gravity="center"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <LinearLayout
-                android:id="@+id/ll_qq"
-                android:layout_width="wrap_content"
+                android:id="@+id/ll_wechat_login"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dp_10"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_qq_login" />
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:src="@drawable/ic_share_wechat" />
 
                 <TextView
-                    android:id="@+id/txt_qq"
+                    android:id="@+id/txt_wechat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_5"
-                    android:text="QQ登录" />
+                    android:text="微信登录" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ll_phone"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
                     android:src="@drawable/ic_phone_login" />
 
                 <TextView
@@ -110,35 +110,26 @@
                     android:text="手机登录" />
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_arrow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/dp_20">
-
-            <TextView
-                android:id="@+id/txt_other"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/ll_qq"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="其他登录方式"
-                android:textColor="@color/text_hint"
-                android:textSize="@dimen/sp_14" />
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/img_down"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10"
-                android:background="@null"
-                android:padding="@dimen/dp_5"
-                android:src="@drawable/ic_down" />
+                <ImageView
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:src="@drawable/ic_qq_login" />
+
+                <TextView
+                    android:id="@+id/txt_qq"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:text="QQ登录" />
+            </LinearLayout>
         </LinearLayout>
-
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
