--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh_layout"
@@ -57,7 +58,7 @@
                                 android:layout_height="wrap_content"
                                 android:drawableLeft="@drawable/ic_normal_member"
                                 android:drawablePadding="@dimen/dp_5"
-                                android:text="普通会员"
+                                tools:text="普通会员"
                                 android:textColor="@color/text_hint"
                                 android:textSize="@dimen/sp_14" />
                         </LinearLayout>
@@ -70,10 +71,21 @@
                             android:layout_below="@+id/ll_name"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="@dimen/dp_10"
-                            android:text="您已获得升级VIP资格"
+                            tools:text="您已获得升级VIP资格"
                             android:textColor="@color/color_vip"
                             android:textSize="@dimen/sp_12" />
 
+                        <TextView
+                            android:id="@+id/txt_info"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/ll_name"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/dp_10"
+                            tools:text="（提示：未升级为VIP之前不显示订单）"
+                            android:textColor="@color/color_vip"
+                            android:textSize="@dimen/sp_12"
+                            android:visibility="gone" />
 
                         <LinearLayout
                             android:id="@+id/ll_container"
@@ -93,7 +105,7 @@
                                 android:id="@+id/txt_vip"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="升级至VIP每月权益预估 "
+                                tools:text="升级至VIP每月权益预估 "
                                 android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/sp_18" />
 
@@ -126,7 +138,7 @@
                                 android:layout_below="@+id/ll_container"
                                 android:background="@drawable/bg_open_vip"
                                 android:paddingBottom="@dimen/dp_5"
-                                android:text="开通VIP"
+                                tools:text="开通VIP"
                                 android:textColor="@color/colorWhite"
                                 android:textSize="@dimen/sp_18" />
                         </LinearLayout>
