--- a/app/src/main/res/layout/activity_my_ali_pay.xml
+++ b/app/src/main/res/layout/activity_my_ali_pay.xml
@@ -20,116 +20,225 @@
             android:layout_marginTop="@dimen/dp_10"
             android:background="@color/colorWhite">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
+                android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/ll_bind"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_20"
-                        android:gravity="center"
-                        android:minHeight="@dimen/dp_48"
-                        android:padding="@dimen/dp_10">
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_20"
+                            android:gravity="center"
+                            android:minHeight="@dimen/dp_48"
+                            android:padding="@dimen/dp_10">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:minWidth="@dimen/dp_100"
+                                android:text="支付宝账号"
+                                android:textColor="@color/color_person_item"
+                                android:textSize="@dimen/sp_16" />
+
+                            <com.bestsoft.ui.widget.ClearEditText
+                                android:id="@+id/edit_id"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/dp_5"
+                                android:layout_marginRight="@dimen/dp_5"
+                                android:background="@null"
+                                android:hint="请输入支付宝账号(手机号/邮箱)"
+                                android:singleLine="true"
+                                android:textColor="@color/text_input_title"
+                                android:textSize="@dimen/sp_16" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:background="@color/line_color" />
+
+                        <LinearLayout
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_20"
+                            android:gravity="center"
+                            android:minHeight="@dimen/dp_48"
+                            android:padding="@dimen/dp_10">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:minWidth="@dimen/dp_100"
+                                android:text="真实姓名"
+                                android:textColor="@color/color_person_item"
+                                android:textSize="@dimen/sp_16" />
+
+                            <com.bestsoft.ui.widget.ClearEditText
+                                android:id="@+id/edit_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/dp_5"
+                                android:layout_marginRight="@dimen/dp_5"
+                                android:background="@null"
+                                android:hint="请输入真实姓名"
+                                android:inputType="text"
+                                android:singleLine="true"
+                                android:textColor="@color/text_input_title"
+                                android:textSize="@dimen/sp_16" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:background="@color/line_color" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:minWidth="@dimen/dp_100"
-                            android:text="支付宝账号"
-                            android:textColor="@color/color_person_item"
-                            android:textSize="@dimen/sp_16" />
-
-                        <com.bestsoft.ui.widget.ClearEditText
-                            android:id="@+id/edit_id"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp_5"
-                            android:layout_marginRight="@dimen/dp_5"
-                            android:background="@null"
-                            android:hint="请输入支付宝账号(手机号/邮箱)"
-                            android:singleLine="true"
-                            android:textColor="@color/text_input_title"
-                            android:textSize="@dimen/sp_16" />
+                            android:padding="@dimen/dp_10"
+                            android:text="*账号输入错误会导致提现不成功噢"
+                            android:textColor="@color/color_gray"
+                            android:textSize="@dimen/sp_12" />
 
                     </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginLeft="@dimen/dp_10"
-                        android:background="@color/line_color" />
-
-                    <LinearLayout
-
+                    <Button
+                        android:id="@+id/btn_save"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_20"
-                        android:gravity="center"
-                        android:minHeight="@dimen/dp_48"
-                        android:padding="@dimen/dp_10">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:minWidth="@dimen/dp_100"
-                            android:text="真实姓名"
-                            android:textColor="@color/color_person_item"
-                            android:textSize="@dimen/sp_16" />
-
-                        <com.bestsoft.ui.widget.ClearEditText
-                            android:id="@+id/edit_name"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp_5"
-                            android:layout_marginRight="@dimen/dp_5"
-                            android:background="@null"
-                            android:hint="请输入真实姓名"
-                            android:inputType="text"
-                            android:singleLine="true"
-                            android:textColor="@color/text_input_title"
-                            android:textSize="@dimen/sp_16" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginLeft="@dimen/dp_10"
-                        android:background="@color/line_color" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/dp_10"
-                        android:text="*账号输入错误会导致提现不成功噢"
-                        android:textColor="@color/color_gray"
-                        android:textSize="@dimen/sp_12" />
-
+                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_marginTop="@dimen/dp_40"
+                        android:layout_marginRight="@dimen/dp_20"
+                        android:layout_marginBottom="@dimen/dp_20"
+                        android:background="@drawable/selector_button_disable"
+                        android:enabled="false"
+                        android:text="保存"
+                        android:textColor="@color/color_person_item"
+                        android:textSize="@dimen/sp_18" />
                 </LinearLayout>
 
-
-                <Button
-                    android:id="@+id/btn_save"
+                <LinearLayout
+                    android:id="@+id/ll_unbind"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:layout_marginTop="@dimen/dp_40"
-                    android:layout_marginRight="@dimen/dp_20"
-                    android:layout_marginBottom="@dimen/dp_20"
-                    android:background="@drawable/selector_button_disable"
-                    android:enabled="false"
-                    android:text="保存"
-                    android:textColor="@color/color_person_item"
-                    android:textSize="@dimen/sp_18" />
-            </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_20"
+                            android:gravity="center"
+                            android:minHeight="@dimen/dp_48"
+                            android:padding="@dimen/dp_10">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:minWidth="@dimen/dp_100"
+                                android:text="支付宝账号"
+                                android:textColor="@color/color_person_item"
+                                android:textSize="@dimen/sp_16" />
+
+                            <TextView
+                                android:id="@+id/txt_number"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/dp_5"
+                                android:layout_marginRight="@dimen/dp_5"
+                                android:background="@null"
+                                android:hint="请输入支付宝账号(手机号/邮箱)"
+                                android:singleLine="true"
+                                android:textColor="@color/text_input_title"
+                                android:textSize="@dimen/sp_16" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:background="@color/line_color" />
+
+                        <LinearLayout
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_20"
+                            android:gravity="center"
+                            android:minHeight="@dimen/dp_48"
+                            android:padding="@dimen/dp_10">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:minWidth="@dimen/dp_100"
+                                android:text="真实姓名"
+                                android:textColor="@color/color_person_item"
+                                android:textSize="@dimen/sp_16" />
+
+                            <TextView
+                                android:id="@+id/txt_real_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/dp_5"
+                                android:layout_marginRight="@dimen/dp_5"
+                                android:background="@null"
+                                android:hint="请输入真实姓名"
+                                android:inputType="text"
+                                android:singleLine="true"
+                                android:textColor="@color/text_input_title"
+                                android:textSize="@dimen/sp_16" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:background="@color/line_color" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/btn_unbind"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_marginTop="@dimen/dp_40"
+                        android:layout_marginRight="@dimen/dp_20"
+                        android:layout_marginBottom="@dimen/dp_20"
+                        android:background="@drawable/selector_button_disable"
+                        android:enabled="true"
+                        android:text="解除绑定"
+                        android:textColor="@color/color_person_item"
+                        android:textSize="@dimen/sp_18" />
+                </LinearLayout>
+            </FrameLayout>
         </android.support.v4.widget.NestedScrollView>
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
