--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -53,7 +53,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_10"
-                            android:text="18.13254557"
+                            android:text="0.0"
                             android:textColor="@color/colorBlack"
                             android:textSize="@dimen/sp_36" />
 
@@ -85,7 +85,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:minWidth="@dimen/dp_180"
-                            android:text="待到账订单298.00元"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="待到账订单0.0元"
                             android:textColor="@color/colorBlack"
                             android:textSize="@dimen/sp_22" />
 
@@ -93,10 +95,9 @@
                             android:id="@+id/btn_own_commission"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_marginRight="@dimen/dp_10"
+                            android:layout_gravity="center"
                             android:background="@drawable/bg_order_purchase"
-                            android:text="含自购6.88"
+                            android:text="含自购0.0"
                             android:textColor="@color/text_yellow"
                             android:textSize="@dimen/sp_14" />
                     </LinearLayout>
