--- a/app/src/main/res/layout/item_fast_entrance.xml
+++ b/app/src/main/res/layout/item_fast_entrance.xml
@@ -4,31 +4,32 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginRight="@dimen/dp_10"
-    android:background="@color/item_fast_entrance"
+    android:background="@drawable/bg_fast_entrace_1"
     android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/dp_30">
 
-    <ImageView
-        android:id="@+id/iv_new_seed_ic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_member" />
+    <!--<ImageView-->
+        <!--android:id="@+id/iv_new_seed_ic"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:visibility="gone"-->
+        <!--android:src="@drawable/ic_member" />-->
 
-    <TextView
-        android:id="@+id/tv_new_seed_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_5"
-        android:text="超级会员"
-        android:textColor="@color/text_member"
-        android:textSize="@dimen/sp_13" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_new_seed_title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dp_5"-->
+        <!--android:text="超级会员"-->
+        <!--android:textColor="@color/text_member"-->
+        <!--android:textSize="@dimen/sp_13" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="商品佣金高收益"
-        android:textColor="@color/color_gray"
-        android:textSize="@dimen/sp_10" />
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="商品佣金高收益"-->
+        <!--android:textColor="@color/color_gray"-->
+        <!--android:textSize="@dimen/sp_10" />-->
 </LinearLayout>
